--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
   "dependencies": {
     "@carbonplan/components": "^12.0.0",
     "@carbonplan/theme": "^7.0.0",
+    "d3": "^7.8.5",
     "next": "^12.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "theme-ui": "^0.15.3"
+    "theme-ui": "^0.15.3",
+    "topojson-client": "^3.1.0"
   },
   "devDependencies": {
     "prettier": "2.3.2"
