--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "^12.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "resize-observer-polyfill": "^1.5.1",
     "theme-ui": "^0.15.3",
     "topojson-client": "^3.1.0"
   },
