--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@carbonplan/components": "^12.0.0",
     "@carbonplan/theme": "^7.0.0",
     "d3": "^7.8.5",
+    "gridjs-react": "^6.0.1",
     "next": "^12.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
